examples/html-to-string-macro/tests/ui/not_closed_tag.stderr
error: open tag has no coresponding close tag
 --> tests/ui/not_closed_tag.rs:5:13
  |
5 |             <html>
  |             ^^^^^^
